--- a/diseño/index.html
+++ b/diseño/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/css/style.css">
     <title>Inicio</title>
 </head>
 <body>
-    <main>
-        
+    <main id="login-page">
+        <div id="div1">
+            <div id="contenedor-imagen">
+                <img src="../src/img/logo.jpg" alt="logo-imagen">
+            </div>
+            <button id="boton-inicio-sesion">JUGAR</button>
+        </div>  
+        <div id="div2">
+            <button id="boton-inicio-sesion">OPCIONES</button>
+            <button id="boton-inicio-sesion">CLASIFICACIONES</button>
+            <a href="login.html" class="enlace-como-boton">
+                <button id="boton-salir">SALIR</button>
+            </a>
+
+        </div>
     </main>
 </body>
 </html>
