--- a/diseño/login.html
+++ b/diseño/login.html
@@ -16,7 +16,9 @@
             <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
         </div>  
         <div id="div2">
-            <button id="boton-inicio-sesion">INICIAR SESION</button>
+            <a href="index.html" class="enlace-como-boton">
+                <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
+            </a>
             <button id="boton-salir">SALIR</button>
         </div>
     </main>
