Mockup login implementeado pero muchas dudas

--- a/diseño/login.html
+++ b/diseño/login.html
@@ -17,7 +17,7 @@
         </div>  
         <div id="div2">
             <a href="index.html" class="enlace-como-boton">
-                <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
+                <button id="boton-iniciar-sesion-login">INICIAR SESIÓN</button>
             </a>
             <button id="boton-salir">SALIR</button>
         </div>
