--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,11 @@
 		<title>Trash Invaders</title>
 	</head>
 	<body>
-		<div id=divVista1>
-			<h2>Soy la vista 1</h2>
-			<!--Metere el Mockup-->
+		<div id="divVista1">
 			<p>Enlace a Vista2</p>
-			<input/>
+			<input />
 		</div>
+		
 		<div id=divVista2>
 			<h2>Soy la vista 2</h2>
 			
