--- a/diseño/index.html
+++ b/diseño/index.html
@@ -12,7 +12,7 @@
             <div id="contenedor-imagen">
                 <img src="../src/img/logo.jpg" alt="logo-imagen">
             </div>
-            <button id="boton-inicio-sesion">JUGAR</button>
+            <button id="boton-jugar-index">JUGAR</button>
         </div>  
         <div id="div2">
             <button id="boton-inicio-sesion">OPCIONES</button>
