--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,60 @@
 		<meta charset=utf-8 />
 		<meta name=viewport content='width=device-width, initial-scale=1' />
 		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/estilos.css">
 		<title>Trash Invaders</title>
 	</head>
 	<body>
-		<div id="divVista1">
+		<div id=divVista1>
+			<h2>Soy la vista 1</h2>
+			<!--Metere el Mockup-->
 			<p>Enlace a Vista2</p>
-			<input />
+			<input/>
+
+			<main id="login-page">
+				<div id="div1">
+					<div id="contenedor-imagen">
+						<img src="../src/img/logo.jpg" alt="logo-imagen">
+					</div>
+					<!-- TODO Validar con Regex -->
+					<input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
+				</div>  
+				<div id="div2">
+					<a href="index.html" class="enlace-como-boton">
+						<button id="boton-inicio-sesion">INICIAR SESIÓN</button>
+					</a>
+					<a href="index.html" class="enlace-como-boton">
+						<button id="boton-salir">SALIR</button>
+					</a>
+				</div>
+			</main>
+
+			
 		</div>
-		
 		<div id=divVista2>
 			<h2>Soy la vista 2</h2>
 			
 			<a href=#>Enlace que no navega</a>
 			<!--Metere el Mockup-->
+
+			<main id="login-page">
+				<div id="div1">
+					<div id="contenedor-imagen">
+						<img src="../src/img/logo.jpg" alt="logo-imagen">
+					</div>
+					<button id="boton-inicio-sesion">JUGAR</button>
+				</div>  
+				<div id="div2">
+					<button id="boton-opciones">OPCIONES</button>
+					<button id="boton-clasificaciones">CLASIFICACIONES</button>
+					<a href="index.html" class="enlace-como-boton">
+						<button id="boton-salir">SALIR</button>
+					</a>
+				</div>
+				
+			</main>
+
 		</div>
 		<div id=divVista3>
 			<h2>Soy la vista 3</h2>
