--- a/diseño/login.html
+++ b/diseño/login.html
@@ -14,10 +14,11 @@
             </div>
             <!-- TODO Validar con Regex -->
             <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
+            
         </div>  
         <div id="div2">
             <a href="index.html" class="enlace-como-boton">
-                <button id="boton-iniciar-sesion-login">INICIAR SESIÓN</button>
+                <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
             </a>
             <button id="boton-salir">SALIR</button>
         </div>
