--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,23 @@
 		<meta name=viewport content='width=device-width, initial-scale=1' />
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
-<!--	<link rel="stylesheet" href="css/estilos.css">  -->	
 		<title>Trash Invaders</title>
 	</head>
 	<body>	  
 		<div id=divVista1>
-			<p></p>
 			<main id="login-page">
 				<div id="div1">
-					
 					<audio id="musica" controls loop>
 						<source src="../src/img/guille.mp3" type="audio/mp3">
 						Tu navegador no soporta el elemento de audio.
 					</audio>
-
 					<div id="contenedor-imagen">
 						<img src="../src/img/logo.jpg" alt="logo-imagen">
 					</div>
 					<!-- TODO Validar con Regex -->
-					<input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
+					<a class="enlace-como-boton">
+						<button id="boton-inicio-sesion">REGISTRAR USUARIO</button>
+					</a>
 				</div>  
 				<div id="div2">
 					<a class="enlace-como-boton">
