--- a/diseño/index.html
+++ b/diseño/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/style.css">
-    <title>Inicio</title>
-</head>
-<body>
-    <main id="login-page">
-        <div id="div1">
-            <div id="contenedor-imagen">
-                <img src="../src/img/logo.jpg" alt="logo-imagen">
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <link rel="stylesheet" href="../src/css/style.css"> -->
+        <title>Document</title>
+    </head>
+    <body>
+        <main>
+            <div id="div-superior">
+                <button><a href="registro.html">Go to Registro</a></button>
             </div>
-            <button id="boton-inicio-sesion">JUGAR</button>
-        </div>  
-        <div id="div2">
-            <button id="boton-inicio-sesion">OPCIONES</button>
-            <button id="boton-inicio-sesion">CLASIFICACIONES</button>
-            <a href="login.html" class="enlace-como-boton">
-                <button id="boton-salir">SALIR</button>
-            </a>
-        </div>
-    </main>
-</body>
+            <div id="div-inferior"></div>
+        </main>
+    </body>
 </html>
