--- a/diseño/index.html
+++ b/diseño/index.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="../src/css/style.css"> -->
+        <link rel="stylesheet" href="../src/css/style.css">
         <title>Document</title>
     </head>
     <body>
-        <main>
+        <main id="landing-page">
             <div id="div-superior">
-                <button><a href="registro.html">Go to Registro</a></button>
+                <button><a href="pon/aqui/la/ruta.html">Registro</a></button>
             </div>
-            <div id="div-inferior"></div>
+            <div id="div-inferior">
+                <button><a href="pon/aqui/la/ruta.html">Iniciar sesion</a></button>
+            </div>
         </main>
     </body>
 </html>
