index login y registro

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -3,16 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../src/css/style.css">
+        <link rel="stylesheet" href="../src/css/new_style.css">
         <title>Document</title>
     </head>
     <body>
         <main id="landing-page">
             <div id="div-superior">
-                <button><a href="pon/aqui/la/ruta.html">Registro</a></button>
+                <div id="contenedor-imagen">
+                    <img src="../src/img/logo.jpg" alt="logo-imagen">
+                </div>
+                <div id="contenedor-boton-registro">
+                    <button><a href="register.html">Registro</a></button>
+                </div>
             </div>
             <div id="div-inferior">
-                <button><a href="pon/aqui/la/ruta.html">Iniciar sesion</a></button>
+                <button><a href="login.html">Iniciar sesion</a></button>
             </div>
         </main>
     </body>
