--- a/diseño/register.html
+++ b/diseño/register.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/css/new_style.css">
     <title>Document</title>
 </head>
 <body>
-    <main id="landing-page">
+    <main id="register-page">
         <div id="div-superior">
-            <h1>REGISTRAR USUARIO</h1>
+            <a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
         </div>
         <div id="div-inferior">
             <form>
-                <label for="nombre">Nombre:</label>
+                <label for="nombre">Nombre</label>
+                
                 <input type="text" id="nombre" name="nombre">
                 <br>
-                <label for="contraseña">Contraseña:</label>
+                <label for="contraseña">Contraseña</label>
                 <input type="password" id="contraseña" name="contraseña">
                 <br>
                 <input type="submit" value="REGISTRARSE">
             </form>
-            <a href="path/al/index.html">Volver al Index</a>
         </div>
     </main>
 </body>
