--- a/diseño/login.html
+++ b/diseño/login.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/css/new_style.css">
     <title>Document</title>
 </head>
 <body>
-    <main id="landing-page">
+    <main id="login-page">
         <div id="div-superior">
             <div id="contenedor-imagen">
-                <img src="../src/img/logo.jpg" alt="logo-imagen">
-            </div>   
+                <a href="index.html"><img src="../src/img/logo.jpg" alt="logo-imagen"></a>
+            </div>
         </div>
         <div id="div-inferior">
             <form>
-                <label for="username">Usuario:</label>
+                <label for="username">Usuario</label>
                 <input type="text" id="username" name="username">
                 <br>
-                <label for="password">Contraseña:</label>
+                <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password">
                 <br>
                 <input type="submit" value="INICIAR SESION">
             </form>
-            <a href="path/al/index.html">Volver al Index</a>
         </div>
     </main>
 </body>
