--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -29,6 +29,9 @@
                     <div id="contenedor-boton-registro">
                         <button><a href="index.html">Volver al indice</a></button>
                     </div>
+                    <div id="mejoras">
+                        <button><a href="mejoras.html">Mejoras</a></button>
+                    </div>
                 </form>
             </div>
         </main>
