--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
                         <source src="../src/img/guille.mp3" type="audio/mp3">
                         Tu navegador no soporta el elemento de audio.
                     </audio>
-
                     <div id="contenedor-imagen">
                         <img src="../src/img/logo.jpg" alt="logo-imagen">
                     </div>
@@ -52,73 +51,14 @@
 
 		</div>
 		<div id=divVista3>
-
 			<main id="game-page">
 				<div id="div1">
 				</div>  
 				<div id="div2" class="grid-container">
-					<div class="grid-item">1</div>
-					<div class="grid-item">2</div>
-					<div class="grid-item">3</div>
-					<div class="grid-item">4</div>
-					<div class="grid-item">5</div>
-					<div class="grid-item">6</div>
-					<div class="grid-item">7</div>
-					<div class="grid-item">8</div>
-					<div class="grid-item">9</div>
-					<div class="grid-item">10</div>
-					<div class="grid-item">11</div>
-					<div class="grid-item">12</div>
-					<div class="grid-item">13</div>
-					<div class="grid-item">14</div>
-					<div class="grid-item">15</div>
-					<div class="grid-item">16</div>
-					<div class="grid-item">17</div>
-					<div class="grid-item">18</div>
-					<div class="grid-item">19</div>
-					<div class="grid-item">20</div>
-					<div class="grid-item">21</div>
-					<div class="grid-item">22</div>
-					<div class="grid-item">23</div>
-					<div class="grid-item">24</div>
-					<div class="grid-item">25</div>
-					<div class="grid-item">26</div>
-					<div class="grid-item">27</div>
-					<div class="grid-item">28</div>
-					<div class="grid-item">29</div>
-					<div class="grid-item">30</div>
-					<div class="grid-item">31</div>
-					<div class="grid-item">32</div>
-					<div class="grid-item">33</div>
-					<div class="grid-item">34</div>
-					<div class="grid-item">35</div>
-					<div class="grid-item">36</div>
-					<div class="grid-item">37</div>
-					<div class="grid-item">38</div>
-					<div class="grid-item">39</div>
-					<div class="grid-item">40</div>
-					<div class="grid-item">41</div>
-					<div class="grid-item">42</div>
-					<div class="grid-item">43</div>
-					<div class="grid-item">44</div>
-					<div class="grid-item">45</div>
-					<div class="grid-item">46</div>
-					<div class="grid-item">47</div>
-					<div class="grid-item">48</div>
-					<div class="grid-item">49</div>
-					<div class="grid-item">50</div>
-					<div class="grid-item">51</div>
-					<div class="grid-item">52</div>
-					<div class="grid-item">53</div>
-					<div class="grid-item">54</div>
-					<div class="grid-item">55</div>
-					<div class="grid-item">56</div>
-					
+					<!-- Aquí es donde se generan los layouts de forma dinámica por medio del DOM -->
 				</div>
 			</main>
-
 		</div>
-
 		<script type=module src=js/controlador.js></script>
 	</body>
 </html>
