Conectar vistas antiguas y mejoras/admin

--- a/diseño/login.html
+++ b/diseño/login.html
@@ -14,16 +14,17 @@
             </div>
         </div>
         <div id="div-inferior">
-            <form>
+            <form action="menup.html" method="post">
                 <label for="username">Usuario</label>
                 <input type="text" id="username" name="username">
                 <br>
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password">
                 <br>
-                <input type="submit" value="INICIAR SESION">
+                <input type="submit" value="Iniciar Sesión">
             </form>
         </div>
+        
     </main>
 </body>
 </html>
