--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -11,8 +11,8 @@
             <div id="div-superior">
                 <label><h1>Mejoras</h1></label>
             </div>
-            <div id="div-inferior">      
-                <table border="1px">
+  
+                <table border="1px"  id="tmejoras">
                     <tr>
                         <th>Imagen</th>
                         <th>Descripción</th>
@@ -21,27 +21,46 @@
                     </tr>
                     <tr>
                         <!-- Celda 1: Imagen -->
-                        <td><img src="ruta_de_la_imagen.jpg" alt="Descripción imagen"></td>
-
+                        <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
                         <!-- Celda 2: Descripción -->
-                        <td>Descripción de la fila 1</td>
-
+                        <td>Es un gatito y esta disociativo</td>
                         <!-- Celda 3: Botón Modificar -->
                         <td><button><a href="index.html">Modificar</a></button></td>
-
                         <!-- Celda 4: Botón Borrar -->
                         <td><button><a href="index.html">Borrar</a></button></td>
                     </tr>
-                    <tr>
-                        <td><img src="ruta_de_la_imagen.jpg" alt="Descripción imagen"></td>
+                   <tr>
+                        <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
                         <td>Descripción de la fila 2</td>
                         <td><button><a href="index.html">Modificar</a></button></td>
                         <td><button><a href="index.html">Borrar</a></button></td>
-
+                    </tr> 
+                    <tr>
+                        <td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
+                        <td>Guillermo</td>
+                        <td><button><a href="index.html">Modificar</a></button></td>
+                        <td><button><a href="index.html">Borrar</a></button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
+                        <td>La comida de Guillermo</td>
+                        <td><button><a href="index.html">Modificar</a></button></td>
+                        <td><button><a href="index.html">Borrar</a></button></td>
                     </tr>
                     <!-- Repite las filas según sea necesario -->
+                    <tr>
+                        <td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
+                        <td>La comida de Guillermo</td>
+                        <td><button><a href="index.html">Modificar</a></button></td>
+                        <td><button><a href="index.html">Borrar</a></button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
+                        <td>Guillermo</td>
+                        <td><button><a href="index.html">Modificar</a></button></td>
+                        <td><button><a href="index.html">Borrar</a></button></td>
+                    </tr>
                 </table>
-            </div>
         </main>
     </body>
 </html>
