--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>	
 		<!-- Introducimos la vista inicial (indice) -->
-		<div id="vistaIndice">
+		<div id="divvistaIndice">
 			<main id="landing-page">
 				<div id="div-superior">
 					<div id="contenedor-imagen">
@@ -27,7 +27,7 @@
 		</div>
 		
 		<!-- Introducimos la vista que corresponde al registro de usuario (register) -->
-		<div id="vistaRegistro">
+		<div id="divvistaRegistro">
 			<main id="register-page">
 				<div id="div-superior">
 					<a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
@@ -48,7 +48,7 @@
 		</div>
 
 		<!-- Introducimos la vista de inicio de sesion (login) -->
-		<div id="vistaLogin">
+		<div id="divvistaLogin">
             <main id="login-page">
                 <div id="div1">
                     <audio id="musica" controls loop>
@@ -72,7 +72,7 @@
         </div>
 
 		<!-- Introducimos la vista que corresponde al menú principal -->
-		<div id="vistaMenu">
+		<div id="divvistaMenu">
 			<main id="login-page">
 				<div id="div1">
 					<div id="contenedor-imagen">
@@ -91,7 +91,7 @@
 		</div>
 
 		<!-- Introducimos la vista que corresponde a la ventana de opciones del administrador (opadmin) -->
-		<div id="vistaOpciones">
+		<div id="divvistaOpciones">
 			<main id="register-page">
 				<div id="div-superior">
 					<label><h1>Administrador</h1></label>
@@ -123,7 +123,7 @@
 		</div>
 
 		<!-- Introducimos la vista que corresponde a la ventana de mejoras en para el juego, los power ups (mejoras) -->
-		<div id="vistaMejoras">
+		<div id="divvistaMejoras">
 			<main id="register-page">
 				<div id="div-superior">
 					<label><h1>Mejoras</h1></label>
@@ -163,7 +163,7 @@
 		</div>
 
 		<!-- Introducimos la vista que corresponde a la ventana de juego -->
-		<div id="vistaJuego">
+		<div id="divvistaJuego">
 			<main id="game-page">
 				<div id="div1">
 				</div>
