--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta name=viewport content='width=device-width, initial-scale=1' />
 		<meta name="author" content="David, Antonio y Guillermo" />
 		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/new_style.css">
 		<title>Trash Invaders</title>
 	</head>
 	<body>	
@@ -35,7 +35,6 @@
 				<div id="div-inferior">
 					<form>
 						<label for="nombre">Nombre</label>
-						
 						<input type="text" id="nombre" name="nombre">
 						<br>
 						<label for="contraseña">Contraseña</label>
@@ -49,44 +48,44 @@
 
 		<!-- Introducimos la vista de inicio de sesion (login) -->
 		<div id="divvistaLogin">
-            <main id="login-page">
-                <div id="div1">
-                    <audio id="musica" controls loop>
-                        <source src="../src/img/guille.mp3" type="audio/mp3">
-                        Tu navegador no soporta el elemento de audio.
-                    </audio>
-                    <div id="contenedor-imagen">
-                        <img src="../src/img/logo.jpg" alt="logo-imagen">
-                    </div>
-                    <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
-                </div>
-                <div id="div2">
-                    <a class="enlace-como-boton">
-                        <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
-                    </a>
-                    <a href="index.html" class="enlace-como-boton">
-                        <button id="boton-salir">SALIR</button>
-                    </a>
-                </div>
-            </main>
+			<main id="login-page">
+				<div id="div-superior">
+					<div id="contenedor-imagen">
+						<a href="index.html"><img src="../src/img/logo.jpg" alt="logo-imagen"></a>
+					</div>
+				</div>
+				<div id="div-inferior">
+					<form action="menup.html" method="post">
+						<label for="username">Usuario</label>
+						<input type="text" id="username" name="username">
+						<br>
+						<label for="password">Contraseña</label>
+						<input type="password" id="password" name="password">
+						<br>
+						<input type="submit" value="Iniciar Sesión">
+					</form>
+				</div>
+			</main>
         </div>
 
 		<!-- Introducimos la vista que corresponde al menú principal -->
 		<div id="divvistaMenu">
 			<main id="login-page">
-				<div id="div1">
+				<div id="div-superior">
 					<div id="contenedor-imagen">
-						<img src="../src/img/logo.jpg" alt="logo-imagen">
+						<img src="../src/img/logo.jpg" alt="logo-imagen"></a>
 					</div>
-					<button id="boton-jugar">JUGAR</button>
-				</div>  
-				<div id="div2">
-					<button id="boton-opciones">OPCIONES</button>
-					<button id="boton-clasificaciones">CLASIFICACIONES</button>
-					<a href="index.html" class="enlace-como-boton">
-						<button id="boton-salir">SALIR</button>
+					<a href="opadmin.html" id="opadminimagen">
+						<img src="../src/img/gato.png" alt="Descripción de la imagen para opadmin">
 					</a>
-				</div>				
+					<a href="mejoras.html" id="mejorasimagen">
+						<img src="../src/img/gato.png" alt="Descripción de la imagen para mejoras">
+					</a> 
+				</div>           
+				<button ><a href="juego.html">JUGAR</a></button>
+				<button >OPCIONES</button>
+				<button >CLASIFICACIONES</button>
+				<button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>
 			</main>
 		</div>
 
@@ -128,8 +127,7 @@
 				<div id="div-superior">
 					<label><h1>Mejoras</h1></label>
 				</div>
-				<div id="div-inferior">      
-					<table border="1px">
+					<table border="1px"  id="tmejoras">
 						<tr>
 							<th>Imagen</th>
 							<th>Descripción</th>
@@ -138,37 +136,111 @@
 						</tr>
 						<tr>
 							<!-- Celda 1: Imagen -->
-							<td><img src="ruta_de_la_imagen.jpg" alt="Descripción imagen"></td>
-	
+							<td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
 							<!-- Celda 2: Descripción -->
-							<td>Descripción de la fila 1</td>
-	
+							<td>Es un gatito y esta disociativo</td>
 							<!-- Celda 3: Botón Modificar -->
 							<td><button><a href="index.html">Modificar</a></button></td>
-	
 							<!-- Celda 4: Botón Borrar -->
 							<td><button><a href="index.html">Borrar</a></button></td>
 						</tr>
 						<tr>
-							<td><img src="ruta_de_la_imagen.jpg" alt="Descripción imagen"></td>
+							<td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
 							<td>Descripción de la fila 2</td>
 							<td><button><a href="index.html">Modificar</a></button></td>
 							<td><button><a href="index.html">Borrar</a></button></td>
-	
+						</tr> 
+						<tr>
+							<td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
+							<td>Guillermo</td>
+							<td><button><a href="index.html">Modificar</a></button></td>
+							<td><button><a href="index.html">Borrar</a></button></td>
+						</tr>
+						<tr>
+							<td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
+							<td>La comida de Guillermo</td>
+							<td><button><a href="index.html">Modificar</a></button></td>
+							<td><button><a href="index.html">Borrar</a></button></td>
 						</tr>
 						<!-- Repite las filas según sea necesario -->
+						<tr>
+							<td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
+							<td>La comida de Guillermo</td>
+							<td><button><a href="index.html">Modificar</a></button></td>
+							<td><button><a href="index.html">Borrar</a></button></td>
+						</tr>
+						<tr>
+							<td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
+							<td>Guillermo</td>
+							<td><button><a href="index.html">Modificar</a></button></td>
+							<td><button><a href="index.html">Borrar</a></button></td>
+						</tr>
 					</table>
-				</div>
 			</main>
 		</div>
 
 		<!-- Introducimos la vista que corresponde a la ventana de juego -->
 		<div id="divvistaJuego">
 			<main id="game-page">
-				<div id="div1">
-				</div>
-				<div id="div2" class="grid-container">
-					<!-- Aquí es donde se generan los layouts de forma dinámica por medio del DOM -->
+				<div id="div-superior">
+				</div>  
+				<div id="div-inferior" class="grid-container">
+					<div class="grid-item">1</div>
+					<div class="grid-item">2</div>
+					<div class="grid-item">3</div>
+					<div class="grid-item">4</div>
+					<div class="grid-item">5</div>
+					<div class="grid-item">6</div>
+					<div class="grid-item">7</div>
+					<div class="grid-item">8</div>
+					<div class="grid-item">9</div>
+					<div class="grid-item">10</div>
+					<div class="grid-item">11</div>
+					<div class="grid-item">12</div>
+					<div class="grid-item">13</div>
+					<div class="grid-item">14</div>
+					<div class="grid-item">15</div>
+					<div class="grid-item">16</div>
+					<div class="grid-item">17</div>
+					<div class="grid-item">18</div>
+					<div class="grid-item">19</div>
+					<div class="grid-item">20</div>
+					<div class="grid-item">21</div>
+					<div class="grid-item">22</div>
+					<div class="grid-item">23</div>
+					<div class="grid-item">24</div>
+					<div class="grid-item">25</div>
+					<div class="grid-item">26</div>
+					<div class="grid-item">27</div>
+					<div class="grid-item">28</div>
+					<div class="grid-item">29</div>
+					<div class="grid-item">30</div>
+					<div class="grid-item">31</div>
+					<div class="grid-item">32</div>
+					<div class="grid-item">33</div>
+					<div class="grid-item">34</div>
+					<div class="grid-item">35</div>
+					<div class="grid-item">36</div>
+					<div class="grid-item">37</div>
+					<div class="grid-item">38</div>
+					<div class="grid-item">39</div>
+					<div class="grid-item">40</div>
+					<div class="grid-item">41</div>
+					<div class="grid-item">42</div>
+					<div class="grid-item">43</div>
+					<div class="grid-item">44</div>
+					<div class="grid-item">45</div>
+					<div class="grid-item">46</div>
+					<div class="grid-item">47</div>
+					<div class="grid-item">48</div>
+					<div class="grid-item">49</div>
+					<div class="grid-item">50</div>
+					<div class="grid-item">51</div>
+					<div class="grid-item">52</div>
+					<div class="grid-item">53</div>
+					<div class="grid-item">54</div>
+					<div class="grid-item">55</div>
+					<div class="grid-item">56</div>
 				</div>
 			</main>
 		</div>
