--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 						<img src="../src/img/gato.png" alt="Descripción de la imagen para mejoras">
 					</a> 
 				</div>           
-				<button ><a href="juego.html">JUGAR</a></button>
+				<button id="boton-jugar"><a href="juego.html">JUGAR</a></button>
 				<button >OPCIONES</button>
 				<button >CLASIFICACIONES</button>
 				<button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>
