Muchas nuevas vistas

--- a/diseño/bimagenes.html
+++ b/diseño/bimagenes.html
@@ -11,8 +11,7 @@
             <div id="div-superior">
                 <label><h1>Banco de Imagenes</h1></label>
             </div>
-            <div id="div-inferior">
-                <div id="bimagenes">
+                <div id="tmejoras">
                     <table border="1px">
                         <tr>
                             <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
@@ -22,9 +21,70 @@
                             <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
                             <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
                         </tr>
+                        <tr>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                        </tr>
+                        <tr>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                        </tr>
+                        <tr>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                        </tr>
+                        <tr>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                        </tr>
+                        <tr>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                        </tr>
+                        <tr>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
+                            <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                        </tr>
+                        <tr>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                            <td>logo.png</td>
+                            <td>gato.jpg</td>
+                        </tr>
                     </table>
-                </div>
-            </div>
+                </div>        
+            <button id="volvermenu"><a href="menup.html">MENU</a></button>
+            <form method="POST" enctype="multipart/form-data" id="formsubir">
+                <input type="file" name="imagen" accept=".png,.jpg,.jpeg," multiple><br/>
+                <input type="submit" value="SUBIR">
+                <input type="submit" value="BORRAR">
+            </form>   
         </main>
     </body>
 </html>
