--- a/diseño/menup.html
+++ b/diseño/menup.html
@@ -21,10 +21,8 @@
             </div>           
             <button ><a href="juego.html">JUGAR</a></button>
             <button >OPCIONES</button>
-            <button >CLASIFICACIONES</button>
-            <button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>
-
-      
+            <button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
+            <button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
         </main>
     </body>
 </html>
