--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -25,15 +25,14 @@
                     <label for="aparicion">Porcentajes de Aparicion de Mejoras</label>
                     <input type="text" id="aparicion" name="aparicion">
                     <br>
-                    <input type="submit" value="REGISTRARSE">
-                    <div id="contenedor-boton-registro">
-                        <button><a href="index.html">Volver al indice</a></button>
-                    </div>
                     <div id="mejoras">
-                        <button><a href="mejoras.html">Mejoras</a></button>
+                        <button><a href="menup.html">ACEPTAR</a></button>
                     </div>
+                    <button id="mejoras"><a href="bimagenes.html">Imagenes</a></button>
+
                 </form>
             </div>
+            <button id="volvermenu"><a href="menup.html">MENU</a></button>
         </main>
     </body>
 </html>
