icono y primera media query

--- a/diseño/bimagenes.html
+++ b/diseño/bimagenes.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../src/css/new_style.css">
+        <meta name="author" content="David, Antonio y Guillermo" />
         <title>Banco de Imagenes</title>
+        <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
         <main id="register-page">
