--- a/diseño/clasificaciones.html
+++ b/diseño/clasificaciones.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../src/css/new_style.css">
+        <meta name="author" content="David, Antonio y Guillermo" />
         <title>CLASIFICACION</title>
+        <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
         <main id="register-page">
             <div id="div-superior">
                 <label><h1>CLASIFICACION</h1></label>
             </div>
-
             <table border="1" id="tmejoras">
                 <thead>
                     <tr>
@@ -57,9 +58,6 @@
                     </tr>
                 </tbody>
             </table>
-            
-
-
             <button id="volvermenu" ><a href="menup.html">MENU</a></button>
         </main>
     </body>
