--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../src/css/new_style.css">
+        <meta name="author" content="David, Antonio y Guillermo" />
         <title>Mejoras</title>
+        <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
         <main id="register-page">
@@ -36,7 +38,6 @@
                         </td>
                     </tr>
             </table>
-
             <button id="volvermenu" ><a href="menup.html">MENU</a></button>
             <button id="subir" ><a href="mejoras.html">ACEPTAR</a></button>
         </main>
