--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../src/css/new_style.css">
+        <meta name="author" content="David, Antonio y Guillermo" />
         <title>Opciones de Administrador</title>
+        <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
         <main id="register-page">
@@ -29,7 +31,6 @@
                         <button><a href="menup.html">ACEPTAR</a></button>
                     </div>
                     <button id="mejoras"><a href="bimagenes.html">Imagenes</a></button>
-
                 </form>
             </div>
             <button id="volvermenu"><a href="menup.html">MENU</a></button>
