Todas las vistas incluidas (sin conexiones)

--- a/src/index.html
+++ b/src/index.html
@@ -76,10 +76,10 @@
 						<img src="../src/img/logo.jpg" alt="logo-imagen"></a>
 					</div>
 				</div>           
-				<button ><a href="juego.html">JUGAR</a></button>
-				<button>MEJORAS</button>
-				<button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
-				<button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
+				<button id="boton-jugar">JUGAR</button>
+				<button id="boton-mejoras">MEJORAS</button>
+				<button id="boton-clasificaciones">CLASIFICACIONES</button>
+				<button id="boton-salir">SALIR</button> <!-- Este botón te envía la vista de inicio de sesión -->   
 			</main>
 		</div>
 
@@ -90,14 +90,14 @@
 					<div id="contenedor-imagen">
 						<img src="../src/img/logo.jpg" alt="logo-imagen"></a>
 					</div>
-					<a href="opadmin.html" id="opadminimagen">
+					<div  id="opadminimagen">
 						<img src="../src/img/gato.png" alt="Descripción de la imagen para opadmin">
-					</a>
+					</div>
 				</div>           
-				<button ><a href="juego.html">JUGAR</a></button>
-				<button>MEJORAS</button>
-				<button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
-				<button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
+				<button id="boton-jugar">JUGAR</button>
+				<button id="boton-mejoras">MEJORAS</button>
+				<button id="boton-clasificaciones">CLASIFICACIONES</button>
+				<button id="boton-salir">SALIR</button>  
 			</main>
 		</div>
 
